src/test/deca/context/invalid/intermediaire2/mots_reserves/16return.deca
// Description:
// Test du mettre le mot réservé return, en nom de variable.
//
// Resultats:
//  16return.deca:10:8:
//
// Historique:
//    crée le 17/06/2022
{
    int return;
}